# tacorl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml  setup.cfg
cluster/: README.md  run_in_slurm.py  slurm_template.sh
config/: evaluate.yaml  evaluate_d4rl.yaml  evaluate_real_world.yaml  evaluate_real_world_from_dataset.yaml  train.yaml
config/callbacks/: offline_rl.yaml  offline_rl_goal_cond.yaml  play_lmp.yaml  play_lmp_d4rl.yaml  play_lmp_real_world.yaml  relay_imitation_learning.yaml  rl_d4rl.yaml  rl_real_world.yaml  tacorl.yaml
config/cameras/: all_cameras.yaml  static_and_gripper.yaml  static_and_tactile.yaml
config/datamodule/: offline_rl_calvin.yaml  online_rl.yaml  play_lmp.yaml  play_lmp_d4rl.yaml  play_lmp_real_world.yaml  relay_imitation_learning.yaml  representation.yaml  tacorl.yaml  tacorl_d4rl.yaml
config/env/: base_env.yaml  drawer_playtable.yaml  goal_conditioned.yaml  slider_playtable.yaml
config/evaluation/: base.yaml  cql.yaml  cql_easy.yaml  cql_hard.yaml  cql_lh_easy.yaml  cql_lh_seq_easy.yaml  lmp.yaml  lmp_d4rl.yaml  lmp_easy.yaml  lmp_hard.yaml  lmp_lh_easy.yaml  lmp_lh_seq_easy.yaml  ril.yaml  ril_easy.yaml  ril_hard.yaml  ril_lh_easy.yaml  ril_lh_seq_easy.yaml  tacorl.yaml  tacorl_d4rl.yaml  tacorl_easy.yaml  tacorl_hard.yaml  tacorl_lh_easy.yaml  tacorl_lh_seq_easy.yaml
config/experiment/: cql_gripper_real_world.yaml  cql_offline_goal_cond.yaml  rl.yaml  (+13 more)
dataset/: README.md
scripts/: evaluate.py  evaluate_d4rl.py  evaluate_real_world.py  evaluate_real_world_from_dataset.py  train.py
(+237 files in other folders)
