[metadata]
description = "Latent Plans for Task-Agnostic Offline Reinforcement Learning"
author = "Erick Rosete Beas, Oier Mees"
author_email = "erickrosetebeas@hotmail.com, meeso@informatik.uni-freiburg.de>"
url = "http://tacorl.cs.uni-freiburg.de/"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    =src
install_requires =
    cmake==3.18.4
    torch<1.14.0,>=1.7.0   
    pytorch-lightning<1.7.0,>=1.5.0
    hydra.core<1.2.0,>=1.1.0
    wandb<0.14.0,>=0.10.0
    plotly<5.12.0,>=5.10.0
    faiss-gpu<1.8.0,>=1.6.0
    MulticoreTSNE==0.1
    stable_baselines3<1.7.0,>=1.6.0

[options.packages.find]
where = src
include = *

[options.extras_require]
dev =
    pre-commit
    black==22.1.0
    flake8==4.0.1
